# RL

./: .gitignore  pyproject.toml
dev/: README.md  grpo-qwen3.5-35ba3b-2n8g-opensage-harbor.yaml
research/opensage/: README.md  opensage_resources_server.py  prepare_harbor_data.py  prepare_harbor_prompts.py  pyproject.toml  run_grpo.py  run_grpo_gym.py
research/opensage/configs/: grpo-qwen3.5-35ba3b-1n8g-harbor-agent-gym.yaml  grpo-qwen3.5-35ba3b-1n8g-opensage-harbor-gym.yaml  grpo-qwen3.5-35ba3b-1n8g-opensage-harbor.yaml
research/opensage/data/: harbor_agent_data.jsonl  harbor_prompts.jsonl  harbor_val.jsonl
research/opensage/nemo_gym_configs/: harbor_opensage.yaml
research/opensage/opensage_agent_server/: app.py  requirements.txt
research/opensage/opensage_agent_server/configs/: opensage.yaml
research/opensage/opensage_resources_server/: requirements.txt
research/opensage/opensage_resources_server/configs/: opensage.yaml
research/opensage/opensage_rl/: dataset.py  processor.py
research/pgc_swe/: .env.example  .gitignore  README.md  pyproject.toml  run_harbor_e2b.sh
research/pgc_swe/configs/: grpo-qwen3.5-9b-1n8g-harbor-e2b.yaml  grpo-qwen3.5-9b-1n8g-swe.yaml  harbor_agent_overrides.txt  harbor_agent_requirements.txt
research/pgc_swe/configs/reference/: grpo-nemotron-nano-16n8g-async-1off-swe.yaml  swebench_openhands_training.yaml
research/pgc_swe/scripts/: patch_dataset.py  patch_harbor_for_nemo_gym.py  prep_harbor_jsonl.py  prepare_e2b_templates.py  prepare_harbor_dataset.sh  repair_broken_templates.py  strip_docker_image.py
(+85 files in other folders)
