[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgc-swe"
version = "0.1.0"
description = "Proportional Gradient Clipping (PGC) on long-horizon SWE-bench RL — Qwen3.5-9B + NeMo RL + NeMo Gym (1-node baseline)."
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = ["nemo-rl"]

[dependency-groups]
test = ["pytest>=7.0.0", "pytest-timeout", "pytest-cov"]

[tool.uv.sources]
nemo-rl = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["pgc_swe"]

[tool.pytest.ini_options]
addopts = "--durations=15 -s -rA -x"
testpaths = ["tests"]
python_files = "test_*.py"
